# bettercv

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  hello.py  manage.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
analyzer/: claude.py  pdf.py  tests.py  views.py
analyzer/tests/: fakes.py  test_claude.py  test_pdf.py  test_views.py
apps/accounts/: admin.py  backends.py  credits.py  forms.py  lemon_squeezy.py  models.py  urls.py  views.py
apps/analyzer/: apps.py  claude.py  urls.py  views.py
apps/coach/: apps.py  coach_service.py  urls.py  views.py  yaml_utils.py
apps/compare/: apps.py  compare_service.py  urls.py  views.py
apps/home/: apps.py  urls.py  views.py
apps/shared/: claude.py  context_processors.py  decorators.py  i18n.py  pdf.py  session.py  sse.py  (+2 more)
ats_analyzer/: asgi.py  settings.py  urls.py  wsgi.py
coach/: coach_service.py  urls.py  views.py
compare/: compare_service.py  urls.py  views.py
docs/: ats_analyzer_spec.md  multi_jd_compare_prd.md  resume_coach_prd.md
home/: views.py
plans/: ats-analyzer-v1.md  auth-credits-v1.md  coach-apply-to-yaml-v1.md  credit-guard-refactor-v1.md  landing-panel-yaml-plan-v1.md  landing-panel-yaml-v1.md  multi-jd-compare.md  resume-coach-v2.md  resume-writer-v1.md  session-restore-plan-v1.md  session-restore-v1.md  session-store-refactor-v1.md  shared-resume-landing-v1.md  sse-streaming-refactor-v1.md  ux-improvements-v1.md
shared/: session.py
writer/: simple_resume_builder.py  views.py
(+78 files in other folders)
